--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node .",
     "watch": "node --watch .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
