--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.2",
-    "node": "^21.1.0",
-    "nodemon": "^3.0.1",
-    "sequelize": "^6.33.0"
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.34.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
