--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
