actualizado y testeado MovieController

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-SERVER_PROT = ""
-DB_NAME = ""
-DB_USER = ""
+SERVER_PORT = "3001"
+DB_NAME = "MoviesDB"
+DB_USER = "root"
 DB_PASSWORD = ""
-DB_HOST = ""
-DB_PORT = ""
-DB_DIALECT = ""
-JWT_SECRET = ""
+DB_HOST = "localhost"
+DB_PORT = "3306"
+DB_DIALECT = "mysql"
+SECRET = ""
