--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.34.0",
-    "sqlite3": "^5.1.6"
+    "sequelize": "^6.34.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
